# ntu-electricity

./: .gitignore  midterm_review.md  pyproject.toml  reference.md
data/describe/: gongtong_daily_usage_filtered.csv  gongtong_test_daily_usage.csv  gongtong_train_s1_daily_usage.csv  gongtong_train_s2_daily_usage.csv  putong_daily_usage_filtered.csv  putong_test_daily_usage.csv  putong_train_s1_daily_usage.csv  putong_train_s2_daily_usage.csv  xinsheng_daily_usage_filtered.csv  xinsheng_test_daily_usage.csv  xinsheng_train_s1_daily_usage.csv  xinsheng_train_s2_daily_usage.csv
data/processed/: README.md  all_buildings_room_list.csv  boya_final_combined.csv  boya_timetable_summary.csv  gongtong_final_combined.csv  gongtong_timetable_summary.csv  putong_final_combined.csv  putong_timetable_summary.csv  target_electricity_dataframe.csv  weather_dataframe.csv  xinsheng_final_combined.csv  xinsheng_timetable_summary.csv  zonghe_timetable_summary.csv  館舍號碼對應.csv
data/raw/: README.md  climate_data_2024.csv  館舍號碼對應.html
data/results/: README.md  advanced_model_coefficients.csv  advanced_model_stats.csv  gongtong_model_metrics.csv  gongtong_predictions.csv  gongtong_scenario_savings.csv  gongtong_test_prediction_comparison.csv  putong_coefficients.csv  putong_model_metrics.csv  putong_predictions.csv  putong_scenario_savings.csv  regression_results_summary.csv  xinsheng_model_metrics.csv  xinsheng_predictions.csv  xinsheng_scenario_savings.csv
notebooks/: README.md
src/archive/: 06-2-alltime.py  (+1 more)
tests/: README.md
visualization/: electricity_report.html
(+2323 files in other folders)
